--- a/app/views/ledgers/_summary.html.erb
+++ b/app/views/ledgers/_summary.html.erb
@@ -1,15 +1,38 @@
-
-  <h3><span class="label label-primary">Total:
-    <%= @ledgers.sum('amount') %>
-    </span>
-  </h3>
-
-  <h3> <span class="label label-success">Cleared: 
-    <%= @ledgers.where("cleared = 't'").sum('amount') %>
-    </span>
-  </h3>
-
-  <h3> <span class="label label-danger">Diff: 
-    <%= (@ledgers.where("cleared = 't'").sum('amount')) - (@ledgers.sum('amount')) %>
-  </span>
-  </h3>
+<div class="row">
+  <div class="col-md-4">
+    <div class="panel panel-success">
+      <div class="panel-heading">
+      <h3 class="text-center panel-title">Actual Cash:</h3>
+      </div>
+      <div class="panel-body">
+        <h3 class="text-center"> <%= @ledgers.sum('amount') %></h3>
+         </div>
+    </div>
+  </div>
+  
+  
+  <div class="col-md-4">
+    <div class="panel panel-warning">
+      <div class="panel-heading">
+      <h3 class="text-center panel-title">Cleared Bank:</h3>
+      </div>
+      <div class="panel-body">
+        <h3 class="text-center"> <%= @ledgers.where("cleared = 't'").sum('amount') %></h3>
+         </div>
+    </div>
+  </div>
+    
+   
+  <div class="col-md-4">
+    <div class="panel panel-danger">
+      <div class="panel-heading">
+      <h3 class="text-center panel-title">Difference:</h3>
+      </div>
+      <div class="panel-body">
+        <h3 class="text-center"><%= (@ledgers.where("cleared = 't'").sum('amount')) - (@ledgers.sum('amount')) %></h3>
+         </div>
+    </div>
+  </div>
+  
+  
+  
