--- a/app/views/ledgers/_index.html.erb
+++ b/app/views/ledgers/_index.html.erb
@@ -1,7 +1,7 @@
 <% @ledgers.each do |ledger| %>
       <tr>
         <td><%= ledger.description %></td>
-        <td><%= ledger.amount %></td>
+        <td><%= number_to_currency(ledger.amount) %></td>
         <td>
           <% if ledger.cleared %>  
          
@@ -10,8 +10,7 @@
           <%= link_to 'Cleared?',cleared_ledger_path(ledger, cleared: "true"),method: :put %>
           <% end %>
         </td>
-        <td><%= link_to "<i class='fa fa-eye'></i>".html_safe, ledger %></td>
-        <td><%= link_to "<i class='fa fa-pencil-square-o'></i>".html_safe, edit_ledger_path(ledger) %></td>
+        <td><%= link_to "<i class='fa fa-pencil-square-o'></i>".html_safe,  edit_ledger_path(ledger),remote: true %></td>
         <td><%= link_to "<i class='fa fa-trash-o'></i>".html_safe, ledger,  method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
