--- a/app/views/ledgers/_summary.html.erb
+++ b/app/views/ledgers/_summary.html.erb
@@ -5,7 +5,7 @@
       <h3 class="text-center panel-title">Actual Cash:</h3>
       </div>
       <div class="panel-body">
-        <h3 class="text-center"> <%= @ledgers.sum('amount') %></h3>
+        <h3 class="text-center"> <%= number_to_currency(@ledgerscash) %></h3>
          </div>
     </div>
   </div>
@@ -17,7 +17,7 @@
       <h3 class="text-center panel-title">Cleared Bank:</h3>
       </div>
       <div class="panel-body">
-        <h3 class="text-center"> <%= @ledgers.where("cleared = 't'").sum('amount') %></h3>
+        <h3 class="text-center"> <%= number_to_currency(@ledgersbank) %></h3>
          </div>
     </div>
   </div>
@@ -29,10 +29,11 @@
       <h3 class="text-center panel-title">Difference:</h3>
       </div>
       <div class="panel-body">
-        <h3 class="text-center"><%= (@ledgers.where("cleared = 't'").sum('amount')) - (@ledgers.sum('amount')) %></h3>
+        <h3 class="text-center"><%= number_to_currency(@ledgersdiff) %></h3>
          </div>
     </div>
   </div>
+</div>
   
   
   
